Much better visualization, still need data though

--- a/ioos_catalog/templates/gliders.html
+++ b/ioos_catalog/templates/gliders.html
@@ -16,188 +16,144 @@
 <script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}"></script>
 
 <div id="main-container" class="container">
+  <form>
+    <label><input type="radio" name="mode" value="grouped"> Grouped</label>
+    <label><input type="radio" name="mode" value="stacked" checked> Stacked</label>
+  </form>
   <div class="chart">
   </div>
 
 </div>
 
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-$(document).ready(function(){ 
-
-  var container = $('#main-container');
-  chart("{{url_for('static', filename='data/chart_sample.csv')}}", "orange", container);
-
+$(document).ready(function() {
+    var container = $('.chart');
+    renderChart(container);
 });
 
+var chartContext = {};
 
-var datearray = [];
-var colorrange = [];
-function chart(csvpath, color, container) {
+function renderChart(container) {
 
-if (color == "blue") {
-  colorrange = ["#045A8D", "#2B8CBE", "#74A9CF", "#A6BDDB", "#D0D1E6", "#F1EEF6"];
-}
-else if (color == "pink") {
-  colorrange = ["#980043", "#DD1C77", "#DF65B0", "#C994C7", "#D4B9DA", "#F1EEF6"];
-}
-else if (color == "orange") {
-  colorrange = ["#B30000", "#E34A33", "#FC8D59", "#FDBB84", "#FDD49E", "#FEF0D9"];
-}
-strokecolor = colorrange[0];
+  chartContext.n = 4; // number of layers
+  chartContext.m = 58; // number of samples per layer
+  chartContext.stack = d3.layout.stack();
+  chartContext.layers = chartContext.stack(d3.range(chartContext.n).map(function() { return bumpLayer(chartContext.m, .1); }));
+  chartContext.yGroupMax = d3.max(chartContext.layers, function(layer) { return d3.max(layer, function(d) { return d.y; }); });
+  chartContext.yStackMax = d3.max(chartContext.layers, function(layer) { return d3.max(layer, function(d) { return d.y0 + d.y; }); });
 
-var format = d3.time.format("%m/%d/%y");
+  chartContext.margin = {top: 40, right: 10, bottom: 20, left: 10};
+  chartContext.width = 960 - chartContext.margin.left - chartContext.margin.right;
+  chartContext.height = 500 - chartContext.margin.top - chartContext.margin.bottom;
 
-var margin = {top: 20, right: 40, bottom: 30, left: 30};
-var width = container.width();
-var height = 400 - margin.top - margin.bottom;
+  chartContext.x = d3.scale.ordinal()
+      .domain(d3.range(chartContext.m))
+      .rangeRoundBands([0, chartContext.width], .08);
 
-var tooltip = d3.select(container[0])
-    .append("div")
-    .attr("class", "remove")
-    .style("position", "absolute")
-    .style("z-index", "20")
-    .style("visibility", "hidden")
-    //.style("top", "30px")
-    //.style("left", "55px");
+  chartContext.y = d3.scale.linear()
+      .domain([0, chartContext.yStackMax])
+      .range([chartContext.height, 0]);
 
-var x = d3.time.scale()
-    .range([0, width]);
+  chartContext.color = d3.scale.linear()
+      .domain([0, chartContext.n - 1])
+      .range(["#aad", "#556"]);
 
-var y = d3.scale.linear()
-    .range([height-10, 0]);
+  chartContext.xAxis = d3.svg.axis()
+      .scale(chartContext.x)
+      .tickSize(0)
+      .tickPadding(6)
+      .orient("bottom");
 
-var z = d3.scale.ordinal()
-    .range(colorrange);
+  chartContext.svg = d3.select(container[0]).append("svg")
+      .attr("width", chartContext.width + chartContext.margin.left + chartContext.margin.right)
+      .attr("height", chartContext.height + chartContext.margin.top + chartContext.margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + chartContext.margin.left + "," + chartContext.margin.top + ")");
 
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom")
-    .ticks(d3.time.years);
-
-var yAxis = d3.svg.axis()
-    .scale(y);
-
-var yAxisr = d3.svg.axis()
-    .scale(y);
-
-var stack = d3.layout.stack()
-    .offset("silhouette")
-    .values(function(d) { return d.values; })
-    .x(function(d) { return d.date; })
-    .y(function(d) { return d.value; });
-
-var nest = d3.nest()
-    .key(function(d) { return d.key; });
-
-var area = d3.svg.area()
-    .interpolate("cardinal")
-    .x(function(d) { return x(d.date); })
-    .y0(function(d) { return y(d.y0); })
-    .y1(function(d) { return y(d.y0 + d.y); });
-
-var svg = d3.select(".chart").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-var graph = d3.csv(csvpath, function(data) {
-  data.forEach(function(d) {
-    d.date = format.parse(d.date);
-    d.value = +d.value;
-  });
-
-  var layers = stack(nest.entries(data));
-
-  x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain([0, d3.max(data, function(d) { return d.y0 + d.y; })]);
-
-  svg.selectAll(".layer")
-      .data(layers)
-    .enter().append("path")
+  chartContext.layer = chartContext.svg.selectAll(".layer")
+      .data(chartContext.layers)
+    .enter().append("g")
       .attr("class", "layer")
-      .attr("d", function(d) { return area(d.values); })
-      .style("fill", function(d, i) { return z(i); });
+      .style("fill", function(d, i) { return chartContext.color(i); });
 
+  chartContext.rect = chartContext.layer.selectAll("rect")
+      .data(function(d) { return d; })
+    .enter().append("rect")
+      .attr("x", function(d) { return chartContext.x(d.x); })
+      .attr("y", chartContext.height)
+      .attr("width", chartContext.x.rangeBand())
+      .attr("height", 0);
 
-  svg.append("g")
+  chartContext.rect.transition()
+      .delay(function(d, i) { return i * 10; })
+      .attr("y", function(d) { return chartContext.y(d.y0 + d.y); })
+      .attr("height", function(d) { return chartContext.y(d.y0) - chartContext.y(d.y0 + d.y); });
+
+  chartContext.svg.append("g")
       .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis);
+      .attr("transform", "translate(0," + chartContext.height + ")")
+      .call(chartContext.xAxis);
 
-  svg.append("g")
-      .attr("class", "y axis")
-      .attr("transform", "translate(" + width + ", 0)")
-      .call(yAxis.orient("right"));
+  d3.selectAll("input").on("change", change);
 
-//  svg.append("g")
-//      .attr("class", "y axis")
-//      .call(yAxis.orient("left"));
+  chartContext.timeout = setTimeout(function() {
+    d3.select("input[value=\"grouped\"]").property("checked", true).each(change);
+  }, 2000);
 
-  svg.selectAll(".layer")
-    .attr("opacity", 1)
-    .on("mouseover", function(d, i) {
-      svg.selectAll(".layer").transition()
-      .duration(250)
-      .attr("opacity", function(d, j) {
-        return j != i ? 0.6 : 1;
-    })})
-
-    .on("mousemove", function(d, i) {
-      mousex = d3.mouse(container[0]);
-      mousex = mousex[0];
-      var invertedx = x.invert(mousex);
-      invertedx = invertedx.getYear() + 1900;
-      var selected = (d.values);
-      for (var k = 0; k < selected.length; k++) {
-        datearray[k] = selected[k].date
-        datearray[k] = datearray[k].getYear() + 1900;
-      }
-      console.log(d);
-
-      mousedate = datearray.indexOf(invertedx);
-      pro = d.values[mousedate].value;
-
-      d3.select(container[0])
-      .classed("hover", true)
-      .attr("stroke", strokecolor)
-      .attr("stroke-width", "0.5px"), 
-      tooltip.html( "<p>" + d.key + "<br>" + pro + "</p>" ).style("visibility", "visible");
-      
-    })
-    .on("mouseout", function(d, i) {
-     svg.selectAll(".layer")
-      .transition()
-      .duration(250)
-      .attr("opacity", "1");
-      d3.select(container[0])
-      .classed("hover", false)
-      .attr("stroke-width", "0px"), tooltip.html( "<p>" + d.key + "<br>" + pro + "</p>" ).style("visibility", "hidden");
-  })
-    
-  var vertical = d3.select(container[0])
-        .append("div")
-        .attr("class", "remove")
-        .style("position", "absolute")
-        .style("z-index", "19")
-        .style("width", "1px")
-        .style("height", "380px")
-        .style("top", "10px")
-        .style("bottom", "30px")
-        .style("left", "0px")
-        .style("background", "#fff");
-
-  d3.select(".chart")
-      .on("mousemove", function(){  
-         mousex = d3.mouse(container[0]);
-         mousex = mousex[0] + 5;
-         vertical.style("left", mousex + "px" )})
-      .on("mouseover", function(){  
-         mousex = d3.mouse(container[0]);
-         mousex = mousex[0] + 5;
-         vertical.style("left", mousex + "px")});
-});
 }
+
+function change() {
+  clearTimeout(chartContext.timeout);
+  if (this.value === "grouped") transitionGrouped();
+  else transitionStacked();
+}
+
+function transitionGrouped() {
+  chartContext.y.domain([0, chartContext.yGroupMax]);
+
+  chartContext.rect.transition()
+      .duration(500)
+      .delay(function(d, i) { return i * 10; })
+      .attr("x", function(d, i, j) { return chartContext.x(d.x) + chartContext.x.rangeBand() / chartContext.n * j; })
+      .attr("width", chartContext.x.rangeBand() / chartContext.n)
+    .transition()
+      .attr("y", function(d) { return chartContext.y(d.y); })
+      .attr("height", function(d) { return chartContext.height - chartContext.y(d.y); });
+}
+
+function transitionStacked() {
+  chartContext.y.domain([0, chartContext.yStackMax]);
+
+  chartContext.rect.transition()
+      .duration(500)
+      .delay(function(d, i) { return i * 10; })
+      .attr("y", function(d) { return chartContext.y(d.y0 + d.y); })
+      .attr("height", function(d) { return chartContext.y(d.y0) - chartContext.y(d.y0 + d.y); })
+    .transition()
+      .attr("x", function(d) { return chartContext.x(d.x); })
+      .attr("width", chartContext.x.rangeBand());
+}
+
+// Inspired by Lee Byron's test data generator.
+function bumpLayer(n, o) {
+
+  function bump(a) {
+    var x = 1 / (.1 + Math.random()),
+        y = 2 * Math.random() - .5,
+        z = 10 / (.1 + Math.random());
+    for (var i = 0; i < n; i++) {
+      var w = (i / n - y) * z;
+      a[i] += x * Math.exp(-w * w);
+    }
+  }
+
+  var a = [], i;
+  for (i = 0; i < n; ++i) a[i] = o + o * Math.random();
+  for (i = 0; i < 5; ++i) bump(a);
+  return a.map(function(d, i) { return {x: i, y: Math.max(0, d)}; });
+}
+
 </script>
 {% endblock %}
