Fall back to service names for sidebar titles
Fixes #151

--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -321,7 +321,7 @@ function bind_features(feature, layer) {
     div
         .append('h4')
         .attr('class', 'list-group-item-heading')
-        .text(feature.properties.name || feature.properties.id);
+        .text(feature.properties.name || feature.properties.service_name);
 
     div
         .append('p')
