--- a/ioos_catalog/static/css/infographic.css
+++ b/ioos_catalog/static/css/infographic.css
@@ -17,3 +17,11 @@
     width: 100%;
     height: auto;
 }
+
+.section-heading {
+    text-align: center;
+}
+
+.welcome img {
+    box-shadow: 10px 10px 5px #888888;
+}
