--- a/ioos_catalog/templates/help_navbar.html
+++ b/ioos_catalog/templates/help_navbar.html
@@ -3,6 +3,7 @@
 {% block jumbo %}
 <div class="row">
   <ul class="nav-header nav navbar-nav">
+    <li><a href="{{ url_for('index') }}">Home</a></li>
     <li><a href="{{ url_for('help') }}">Help</a></li>
     <li> <a href="https://github.com/ioos/catalog/wiki/Roadmap">Roadmap</a></li>
     <li> <a href="https://github.com/ioos/catalog/milestones">Milestones</a></li>
