--- a/ioos_catalog/templates/help.html
+++ b/ioos_catalog/templates/help.html
@@ -1,15 +1,4 @@
-{% extends "layout.html" %}
-
-{% block jumbo %}
-<div class="row">
-  <ul class="nav-header nav navbar-nav">
-    <li><a href="{{ url_for('help') }}">Help</a></li>
-    <li> <a href="https://github.com/ioos/catalog/wiki/Roadmap">Roadmap</a></li>
-    <li> <a href="https://github.com/ioos/catalog/milestones">Milestones</a></li>
-    <li> <a href="{{url_for('feedback')}}">Feedback</a></li>
-  <ul>
-</div>
-{% endblock %}
+{% extends "help_navbar.html" %}
 
 {% block page %}
 
