Changed "asset map" to just "map" on landing page

--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -45,7 +45,7 @@
         <div class="col-xs-12 col-md-12">
           <div class="img-text">
             <a href="{{url_for('asset_map')}}">
-              <img class="img-responsive" src="{{url_for('static', filename='img/landing/earth.png')}}" alt="Catalog Asset Map"></img>
+              <img class="img-responsive" src="{{url_for('static', filename='img/landing/earth.png')}}" alt="Catalog Map"></img>
             </a>
             <div class="overlay overlay-map">
               Catalog Asset Map
