--- a/ioos_catalog/templates/featured_maps.html
+++ b/ioos_catalog/templates/featured_maps.html
@@ -16,39 +16,45 @@
     <div class='col-md-12'>
       <div class='list-group'>
         <div class="list-group-item media">
-          <a class="pull-left" href="http://data.glos.us/portal/">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/glos.png')}}" alt="GLOS">
+          <a class="pull-left" href="http://portal.aoos.org/alaska-statewide.php">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/aoos.png')}}" alt="AOOS">
           </a>
           <div class="media-body">
-            <h4 class="media-heading">GLOS Data Portal</h4>
-            The GLOS Data Portal provides access to near-realtime and archived observations and to model forecasts for the Great Lakes.
-          </div>
-        </div>
-        <div class="list-group-item media">
-          <a class="pull-left" href="http://www.neracoos.org/realtime_map">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/neracoos.png')}}" alt="NERACOOS">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">NERACOOS Real-time Data Portal</h4>
-            This map displays real-time observations from buoys and monitoring stations in the Northeast region.
+            <h4 class="media-heading">AOOS Ocean Data Explorer</h4>
+            This portal contains scientific and management information
+            including real-time sensor feeds, operational oceanographic and
+            atmospheric models, satellite observations and GIS data sets that
+            describe the biological, chemical and physical characteristics of
+            Alaska and its surrounding waters.
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
-          <a class="pull-left" href="http://assets.maracoos.org/">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/maracoos.png')}}" alt="MARACOOS">
+          <a class="pull-left" href="http://sccoos.org/interactive-map/">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/caricoos.png')}}" alt="CariCOOS">
           </a>
           <div class="media-body">
-            <h4 class="media-heading">MARACOOS Asset Map</h4>
-            The MARACOOS asset map displays gridded datasets from model output in conjunction station data, for the mid-atlantic region.
+            <h4 class="media-heading">CariCOOS Latest Conditions and Forecasts Map</h4>
+            The CariCOOS Latest Conditions and Forecasts Map graphically
+            displays the latest observations and forcasts form the Caribbean
+            Coastal Ocean Observing System (CariCOOS).
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
-          <a class="pull-left" href="http://secoora.org/maps/">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/secoora.png')}}" alt="SECOORA">
+          <a class="pull-left" href="http://data.cencoos.org">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/cencoos.png')}}" alt="CENCOOS">
           </a>
           <div class="media-body">
-            <h4 class="media-heading">SECOORA Data Portal</h4>
-            The SECOORA asset map displays station information for the south east region with optional map-overlays of bathymetric data.
+            <h4 class="media-heading">CENCOOS Data Portal</h4>
+            This map contains station data from the Californian coast, streaming in real-time with a history of up to seven days.
+          </div>
+        </div> <!-- list-group-item -->
+        <div class="list-group-item media">
+          <a class="pull-left" href="#">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/cordc.png')}}" alt="CORDC">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">CORDC HF-Radar</h4>
+            An asset map of the coastal HF-Radar stations and their data output.
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
@@ -66,12 +72,21 @@
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
-          <a class="pull-left" href="http://data.cencoos.org">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/cencoos.png')}}" alt="CENCOOS">
+          <a class="pull-left" href="http://data.glos.us/portal/">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/glos.png')}}" alt="GLOS">
           </a>
           <div class="media-body">
-            <h4 class="media-heading">CENCOOS Data Portal</h4>
-            This map contains station data from the Californian coast, streaming in real-time with a history of up to seven days.
+            <h4 class="media-heading">GLOS Data Portal</h4>
+            The GLOS Data Portal provides access to near-realtime and archived observations and to model forecasts for the Great Lakes.
+          </div>
+        </div> <!-- list-group-item -->
+        <div class="list-group-item media">
+          <a class="pull-left" href="http://assets.maracoos.org/">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/maracoos.png')}}" alt="MARACOOS">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">MARACOOS Asset Map</h4>
+            The MARACOOS asset map displays gridded datasets from model output in conjunction station data, for the mid-atlantic region.
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
@@ -81,19 +96,6 @@
           <div class="media-body">
             <h4 class="media-heading">NANOOS Visualization System</h4>
             The NVS contains a data explorer which has a mapping of the NANOOS assets and an in-situ data graph and data comparison with model output.
-          </div>
-        </div> <!-- list-group-item -->
-        <div class="list-group-item media">
-          <a class="pull-left" href="http://portal.aoos.org/alaska-statewide.php">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/aoos.png')}}" alt="AOOS">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">AOOS Ocean Data Explorer</h4>
-            This portal contains scientific and management information
-            including real-time sensor feeds, operational oceanographic and
-            atmospheric models, satellite observations and GIS data sets that
-            describe the biological, chemical and physical characteristics of
-            Alaska and its surrounding waters.
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
@@ -108,15 +110,47 @@
           </div>
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/cordc.png')}}" alt="CORDC">
+          <a class="pull-left" href="http://www.neracoos.org/realtime_map">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/neracoos.png')}}" alt="NERACOOS">
           </a>
           <div class="media-body">
-            <h4 class="media-heading">CORDC HF-Radar</h4>
-            An asset map of the coastal HF-Radar stations and their data output.
+            <h4 class="media-heading">NERACOOS Real-time Data Portal</h4>
+            This map displays real-time observations from buoys and monitoring stations in the Northeast region.
           </div>
         </div> <!-- list-group-item -->
-         <!-- list-group-item -->
+        <div class="list-group-item media">
+          <a class="pull-left" href="http://oos.soest.hawaii.edu/pacioos/voyager/index.html">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/pacioos.png')}}" alt="PacIOOS">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">PacIOOS Voyager</h4>
+            The PacIOOS Data Management System focuses on the management,
+            service, and delivery of PacIOOS-related data, allowing PacIOOS to
+            respond to partner needs for sharing and integrating data, offer
+            decision-making products and access to data download sites, and to
+            display information in real-time and forecasting formats.
+          </div>
+        </div> <!-- list-group-item -->
+        <div class="list-group-item media">
+          <a class="pull-left" href="http://sccoos.org/interactive-map/">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/sccoos.png')}}" alt="SCCOOS">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">SCCOOS Interactive Map</h4>
+            The SCCOOS Interactive Map has a listing of available products that
+            can be displayed on an interactive map as well as an interface for
+            all SCCOOS observations.
+          </div>
+        </div> <!-- list-group-item -->
+        <div class="list-group-item media">
+          <a class="pull-left" href="http://secoora.org/maps/">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/secoora.png')}}" alt="SECOORA">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading">SECOORA Data Portal</h4>
+            The SECOORA asset map displays station information for the south east region with optional map-overlays of bathymetric data.
+          </div>
+        </div> <!-- list-group-item -->
     </div>
   </div>
 </div>
