Renames asset_map -> catalog_map

--- a/ioos_catalog/templates/base.html
+++ b/ioos_catalog/templates/base.html
@@ -53,7 +53,7 @@
                 </ul>
               </li>
               <li><a href="{{ url_for('metadatas') }}">Asset Inventory</a></li>
-              <li><a href="{{ url_for('asset_map') }}">Asset Map <span class="label label-info">BETA</span></a></li>
+              <li><a href="{{ url_for('catalog_map') }}">Catalog Map <span class="label label-info">BETA</span></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="{{ url_for('help') }}">Help</a></li>
