--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -44,11 +44,11 @@
       <div class="row">
         <div class="col-xs-12 col-md-12">
           <div class="img-text">
-            <a href="{{url_for('asset_map')}}">
+            <a href="{{url_for('catalog_map')}}">
               <img class="img-responsive" src="{{url_for('static', filename='img/landing/earth.png')}}" alt="Catalog Map"></img>
             </a>
             <div class="overlay overlay-map">
-              Catalog Asset Map
+              Catalog Map
             </div>
           </div>
         </div>
