--- a/ioos_catalog/templates/gliders.html
+++ b/ioos_catalog/templates/gliders.html
@@ -70,11 +70,11 @@
     </div> <!-- col -->
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="{{url_for('asset_map')}}Glider_DAC">
+        <a href="{{url_for('catalog_map', filter_provider='Glider_DAC')}}">
           <img src="{{url_for('static', filename='img/catalog_map_thumb.png')}}" alt="Glider Catalog Map"></img>
         </a>
         <div class="caption">
-          <h3>Catalog Glider Asset Map</h3>
+          <h3>Catalog Glider Map</h3>
           <p>The IOOS Catalog Map displays IOOS registered datasets and services. Several glider datasets are registered with the IOOS catalog.</p>
         </div> <!-- caption -->
       </div> <!-- thumbnail -->
