--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -283,14 +283,19 @@ var projection = d3.geo.albers()
     //.precision(.1)
     //.translate([0, height / 2]);
 
+var nativeProjection = d3.geo.projection(function(x,y) { return [x,y] });
+
 var path = d3.geo.path()
   .projection(projection);
+
+var nativePath = d3.geo.path().projection(nativeProjection);
 
 var svg = d3.select("#map").append("svg")
   .attr("width", width)
   .attr("height", height);
 
   svg.append("filter").attr("id", "blur-effect-1").append("feGaussianBlur").attr("stdDeviation", 2);
+
 
 queue()
   .defer(d3.json, "{{ url_for('.static', filename='geojson/na_merged.geojson') }}")
@@ -314,10 +319,29 @@ queue()
 
     rgs
       .append("path")
-        .attr("d", path);
+      .attr("d", function(d) { 
+        if(d.properties.CRS == 'WGS84') {
+          return path(d);
+        } else if(d.properties.CRS == 'Native') {
+          var proj = d.geometry.coordinates;
+          return "M" + proj[0] + "," + proj[1] + "m0,4.5a4.5,4.5 0 1,1 0,-9a4.5,4.5 0 1,1 0,9z";
+        }
+      });
 
     var textg = rgs.append("g")
-      .attr("transform", function(d) { var proj = projection(d.geometry.coordinates); proj[0] += 5; proj[1] += 5; return "translate(" + proj[0] + "," + proj[1] + ")"; })
+      .attr("transform", function(d) { 
+          if(d.properties.CRS == "WGS84") {
+            var proj = projection(d.geometry.coordinates); 
+            proj[0] += 5; 
+            proj[1] += 5; 
+            return "translate(" + proj[0] + "," + proj[1] + ")"; 
+          } else if (d.properties.CRS == "Native") {
+            var proj = d.geometry.coordinates;
+            proj[0] += 5; 
+            proj[1] += 5; 
+            return "translate(" + proj[0] + "," + proj[1] + ")"; 
+          }
+      })
       .on('click', function() {
         var region = d3.select(this).datum().properties.region,
           curVals = $('#region-select').val();
