--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -1,4 +1,4 @@
-{% extends "help_navbar.html" %}
+{% extends "layout.html" %}
 {% block css %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/welcome.css') }}">
 {% endblock %}
